virtual-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: neptune-gateway
  namespace: neptune
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 443
      name: https-neptune
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ingress-cert-production-tls
    hosts:
    - "neptune.sirddail.net"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: neptune-vs
  namespace: neptune
spec:
  hosts:
  - "neptune.sirddail.net"
  gateways:
  - neptune-gateway
  http:
  - route:
    - destination:
        host: neptune
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: neptune-dr
  namespace: neptune
spec:
  host: neptune
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: neptune-sve
  namespace: neptune
spec:
  hosts:
  - "neptune.sirddail.net"
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
  - address: 192.168.86.52
